# Assistant-for-People-with-Low-Vision

./: README.md  server.py
DepthQA/: README.md  StereoParamsZed.yml  depthQuestionAnswering.py  getSegmentation.py~  server_depth_qa.py
DepthQA/DepthExtraction/: CMakeLists.txt  Depth_extraction  cmake_install.cmake
DepthQA/DepthExtraction/Code/: main.cpp  main.cpp~  stereocam.cpp  untitled.pro  untitled.pro.user.3.2-pre1  untitled.pro.user.737c9c0
DepthQA/DepthExtraction/Code/elasFiles/: elas.h  matrix.cpp
DepthQA/DepthExtraction/cmakeTest/: CMakeCache.txt  Makefile  Makefile~  cmake~
DepthQA/DepthExtraction/cmakeTest/src/: MiscTool.cpp  stereocam.cpp  stereocam.h
DepthQA/DepthExtraction/cmakeTest/src/Calib/: bumblebee.yml
DepthQA/DepthExtraction/cmakeTest/src/elasFiles/: elas.h  elas.h~
DepthQA/DepthExtraction/src/: MiscTool.h  main.cpp
DepthQA/DepthExtraction/src/elasFiles/: elas.cpp  filter.cpp  filter.h  triangle.cpp
DepthQA/InterFiles/: Bbox.txt~  CommandLineInput.txt~
EmotionRecognition/: .emotions.py.swo  .emotions.py.swp  README.md  dataset_loader.py~  emotion_predictor.py~  emotions.py~  emotions2.py~  tf_emotion_class.py  tf_emotion_class.py~
EmotionRecognition/detection/: Detectface.py  Detectface.py~  README.md  detection.py  detection.py~  test.py~
EmotionRecognition/detection/symbol/: resnet.py
FaceRecognition/: README.md  recognition.py  recognition.py~
FaceRecognition/data/: labels.csv  reps.csv
FaceRecognition/face_frontalization/: demo.py  facial_feature_detector.py  frontalization.py
GlassApp/: README.md  settings.gradle
GlassApp/app/: build.gradle
GlassApp/app/src/main/: AndroidManifest.xml
GlassApp/app/src/main/res/layout/: activity_main.xml  activity_upload.xml
GlassApp/app/src/main/res/values/: arrays.xml  colors.xml  privatestrings.xml  strings.xml  values.xml
GlassApp/app/src/main/res/xml/: preference.xml
GlassApp/smartExtensionAPI/: build.gradle  lint.xml
GlassApp/smartExtensionAPI/src/main/: AndroidManifest.xml
GlassApp/smartExtensionAPI/src/main/res/values/: strings.xml  widget_attrs.xml
GlassApp/smartExtensionUtils/: build.gradle  lint.xml
GlassApp/smartExtensionUtils/src/main/: AndroidManifest.xml
GlassApp/smartExtensionUtils/src/main/res/layout/: smart_watch_widget.xml
GlassApp/smartEyeglassAPI/: build.gradle
GlassApp/smartEyeglassAPI/src/main/: AndroidManifest.xml
Im2txt/: README.md  imgCaptioning.py  server.py
Im2txt/inference_utils/: inference_wrapper_base.py
ObstacleAvoidance/: CMakeLists.txt  DepthQuestionAnswering.py  README.md  server_depth.py  server_depth.py~  test.c~  test.py  test.py~
ObstacleAvoidance/src/: main.cpp  stereocam.cpp
ObstacleAvoidance/src/elasFiles/: elas.h  triangle.h
QuestionAnswering/: QuestionAnswering.py  QuestionAnswering.py~  server.py  server.py~  vqa_data_provider_layer.py~
TextRecognition/: menu_recog.py  menu_recog.py~  text.txt~
UserInputClassification/: README.md  lstm.py
UserInputClassification/data/: csv_to_numpy.py
(+88 files in other folders)
